fix: prevent dark mode from obliterating text inadvertently

--- a/bloembraaden/client/peat.css
+++ b/bloembraaden/client/peat.css
@@ -24,6 +24,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     padding: 0;
     vertical-align: baseline;
     color: #000;
+    background-color: #fff;
 }
 html, body {
     font-family: Arial, Helvetica, sans-serif;
